--- a/server/package.json
+++ b/server/package.json
@@ -3,12 +3,12 @@
   "version": "2.0.0",
   "description": "This is the server of the buzzerio-a realtime buzzer application for the quiz competition",
   "main": "index.js",
-  "scripts": {
-    
-  },
+  "scripts": {},
   "author": "velociraptor",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.6.4"
   }
