--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,12 @@
   "author": "velociraptor",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mongoose": "^8.6.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.6.4",
+    "nodemailer": "^6.9.15"
   }
 }
