Added the new ui for login and signup

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,36 @@
 # Node modules
-node_modules/
+node_modules
+dist
+dist-ssr
+*.local
+
 
 # Parcel cache
 .parcel-cache/
 
 # Build output
 dist/
+dummycclietn/
 
 # Logs
 logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # Environment variables
 .env
+
+#vs Code cahce
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
