--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.507.0",
     "react": "^19.0.0",
